configuracion docker y swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=pruebanequi
+
+# Base de datos R2DBC
+spring.r2dbc.url=r2dbc:mysql://localhost:3306/pruebanequi
+spring.r2dbc.username=usuarionequi
+spring.r2dbc.password=passwordnequi
+
+# Configure el servidor web
+server.port=8080
+
+# Configuracion de swagger
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
