--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=pruebanequi
 
 # Base de datos R2DBC
-spring.r2dbc.url=r2dbc:mysql://localhost:3306/pruebanequi
-spring.r2dbc.username=usuarionequi
-spring.r2dbc.password=passwordnequi
+spring.r2dbc.url=${SPRING_R2DBC_URL}
+spring.r2dbc.username=${SPRING_R2DBC_USERNAME}
+spring.r2dbc.password=${SPRING_R2DBC_PASSWORD}
 
 # Configure el servidor web
 server.port=8080
