--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
     implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.5.0'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
-
 }
 
+tasks.named('test') {
+    useJUnitPlatform()
+}
