--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ MYSQL_ROOT_PASSWORD=rootpassword
 MYSQL_DATABASE=pruebanequi
 MYSQL_USER=usuarionequi
 MYSQL_PASSWORD=passwordnequi
-SPRING_R2DBC_URL=r2dbc:mysql://localhost:3306/pruebanequi
+SPRING_R2DBC_URL=r2dbc:mysql://172.18.0.2:3306/pruebanequi
 SPRING_R2DBC_USERNAME=usuarionequi
 SPRING_R2DBC_PASSWORD=passwordnequi
