--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=pruebanequi
 
 # Base de datos R2DBC
-spring.r2dbc.url=r2dbc:mysql://localhost:3306/pruebanequi
-spring.r2dbc.username=usuarionequi
-spring.r2dbc.password=passwordnequi
+spring.r2dbc.url=r2dbc:mysql://mysql_db:3306/pruebanequi
+spring.r2dbc.username=root
+spring.r2dbc.password=rootpassword
 
 # Configure el servidor web
 server.port=8080
@@ -11,3 +11,9 @@ server.port=8080
 # Configuracion de swagger
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+
+# Configuración de logs detallados
+logging.level.root=DEBUG
+logging.level.org.springframework.r2dbc=TRACE
+logging.level.io.r2dbc.postgresql.QUERY=TRACE
+logging.level.org.springframework.boot.autoconfigure.r2dbc=DEBUG
